unpackaged/main/default/objects/litify_pm__Questionnaire__c/fields/litify_pm__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Set as active when users create record. Questionnaires can navigate to an Active Questionnaire using navigation rules.</description>
    <inlineHelpText>Set as active when users create record. Questionnaires can navigate to an Active Questionnaire using navigation rules.</inlineHelpText>
    <label>Active Questionnaire</label>
    <type>Checkbox</type>
</CustomField>