unpackaged/main/default/objects/litify_pm__Questionnaire__c/fields/litify_pm__Is_Available_On_Intake__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Is_Available_On_Intake__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does not appear in the picklist of questionnaires when users add questionnaires to an Intake. Other questionnaires can navigate to unavailable questionnaires through navigation rules. Use this for Junction Questionnaires.</description>
    <inlineHelpText>Does not appear in the picklist of questionnaires when users add questionnaires to an Intake. Other questionnaires can navigate to unavailable questionnaires through navigation rules. Use this for Junction Questionnaires.</inlineHelpText>
    <label>Available Questionnaire</label>
    <type>Checkbox</type>
</CustomField>