unpackaged/main/default/objects/litify_pm__Questionnaire__c/fields/litify_pm__is_default__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__is_default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is default</label>
    <type>Checkbox</type>
</CustomField>