unpackaged/main/default/objects/litify_pm__Questionnaire__c/fields/litify_pm__questions__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__questions__c</fullName>
    <label>Questions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>