unpackaged/main/default/objects/litify_pm__Questionnaire__c/fields/litify_pm__SObject_Modifications__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__SObject_Modifications__c</fullName>
    <label>SObject Modifications</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>